@@ -67,7 +67,6 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
@@ -91,8 +90,6 @@ import org.hisp.dhis.common.QueryOperator;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.commons.util.SqlHelper;
 import org.hisp.dhis.dataelement.DataElement;
-import org.hisp.dhis.jdbc.StatementBuilder;
-import org.hisp.dhis.jdbc.statementbuilder.PostgreSQLStatementBuilder;
 import org.hisp.dhis.period.MonthlyPeriodType;
 import org.hisp.dhis.period.Period;
 import org.hisp.dhis.period.PeriodTypeEnum;
@@ -130,14 +127,16 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
 
   private DataElement dataElementA;
 
-  private Date from = getDate(2017, 10, 10);
+  private final Date from = getDate(2017, 10, 10);
 
-  private Date to = getDate(2018, 10, 10);
+  private final Date to = getDate(2018, 10, 10);
+
+  private final UUID uuidA = UUID.fromString("c0d3661b-c7f6-48a0-8cf3-b1380cd005dd");
+
+  private final UUID uuidB = UUID.fromString("1786142e-6d51-48e3-8bbe-9cc2a2836120");
 
   @BeforeEach
   public void setUp() {
-    StatementBuilder statementBuilder = new PostgreSQLStatementBuilder();
-
     DefaultProgramIndicatorSubqueryBuilder programIndicatorSubqueryBuilder =
         new DefaultProgramIndicatorSubqueryBuilder(programIndicatorService);
 
@@ -146,7 +145,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
             jdbcTemplate,
             programIndicatorService,
             programIndicatorSubqueryBuilder,
-            new EventTimeFieldSqlRenderer(statementBuilder),
+            new EventTimeFieldSqlRenderer(),
             executionPlanStore);
 
     enrollmentSubject =
@@ -154,7 +153,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
             jdbcTemplate,
             programIndicatorService,
             programIndicatorSubqueryBuilder,
-            new EnrollmentTimeFieldSqlRenderer(statementBuilder),
+            new EnrollmentTimeFieldSqlRenderer(),
             executionPlanStore);
 
     programA = createProgram('A');
@@ -571,9 +570,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
   void testGeItemNoFiltersSql() {
     EventQueryParams queryParams =
         new EventQueryParams.Builder()
-            .addItem(
-                buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), Collections.emptyList()))
+            .addItem(buildQueryItemWithGroupAndFilters("item", uuidA, List.of()))
             .build();
     assertEquals("", eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper()));
   }
@@ -584,7 +581,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), List.of(buildQueryFilter(EQ, "A"))))
+                    "item", uuidA, List.of(buildQueryFilter(EQ, "A"))))
             .build();
     String result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals("where ax.\"item\" = 'A' ", result);
@@ -596,7 +593,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), List.of(buildQueryFilter(NEQ, "12")), NUMBER))
+                    "item", uuidA, List.of(buildQueryFilter(NEQ, "12")), NUMBER))
             .build();
     String result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals("where (ax.\"item\" is null or ax.\"item\" != '12') ", result);
@@ -608,7 +605,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), List.of(buildQueryFilter(NILIKE, "A"))))
+                    "item", uuidA, List.of(buildQueryFilter(NILIKE, "A"))))
             .build();
     String result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals("where (ax.\"item\" is null or ax.\"item\" not ilike '%A%') ", result);
@@ -620,7 +617,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), List.of(buildQueryFilter(NEQ, "A")), TEXT))
+                    "item", uuidA, List.of(buildQueryFilter(NEQ, "A")), TEXT))
             .build();
     String result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals("where (coalesce(ax.\"item\", '') = '' or ax.\"item\" != 'A') ", result);
@@ -629,7 +626,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), List.of(buildQueryFilter(NE, "A")), TEXT))
+                    "item", uuidA, List.of(buildQueryFilter(NE, "A")), TEXT))
             .build();
     result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals("where (coalesce(ax.\"item\", '') = '' or ax.\"item\" != 'A') ", result);
@@ -641,7 +638,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item", UUID.randomUUID(), List.of(buildQueryFilter(NIEQ, "A")), TEXT))
+                    "item", uuidA, List.of(buildQueryFilter(NIEQ, "A")), TEXT))
             .build();
     String result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals(
@@ -654,9 +651,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item",
-                    UUID.randomUUID(),
-                    List.of(buildQueryFilter(EQ, "A"), buildQueryFilter(EQ, "B"))))
+                    "item", uuidA, List.of(buildQueryFilter(EQ, "A"), buildQueryFilter(EQ, "B"))))
             .build();
     String result = eventSubject.getQueryItemsAndFiltersWhereClause(queryParams, new SqlHelper());
     assertEquals("where ax.\"item\" = 'A'  and ax.\"item\" = 'B' ", result);
@@ -668,9 +663,7 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item",
-                    UUID.randomUUID(),
-                    List.of(buildQueryFilter(EQ, "A"), buildQueryFilter(EQ, "B"))))
+                    "item", uuidA, List.of(buildQueryFilter(EQ, "A"), buildQueryFilter(EQ, "B"))))
             .withEnhancedConditions(true)
             .build();
 
@@ -680,15 +673,14 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
 
   @Test
   void testGetItemTwoConditionsSameGroupSqlEnhancedConditions() {
-    UUID groupUUID = UUID.randomUUID();
     EventQueryParams queryParams =
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item1", groupUUID, List.of(buildQueryFilter(EQ, "A"))))
+                    "item1", uuidA, List.of(buildQueryFilter(EQ, "A"))))
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item2", groupUUID, List.of(buildQueryFilter(EQ, "B"))))
+                    "item2", uuidA, List.of(buildQueryFilter(EQ, "B"))))
             .withEnhancedConditions(true)
             .build();
 
@@ -698,22 +690,20 @@ class AbstractJdbcEventAnalyticsManagerTest extends EventAnalyticsTest {
 
   @Test
   void testGetItemTwoConditionsDifferentGroupsSqlEnhancedConditions() {
-    UUID groupUUID1 = UUID.randomUUID();
-    UUID groupUUID2 = UUID.randomUUID();
     EventQueryParams queryParams =
         new EventQueryParams.Builder()
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item1", groupUUID1, List.of(buildQueryFilter(EQ, "A"))))
+                    "item1", uuidA, List.of(buildQueryFilter(EQ, "A"))))
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item2", groupUUID1, List.of(buildQueryFilter(EQ, "B"))))
+                    "item2", uuidA, List.of(buildQueryFilter(EQ, "B"))))
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item3", groupUUID2, List.of(buildQueryFilter(EQ, "C"))))
+                    "item3", uuidB, List.of(buildQueryFilter(EQ, "C"))))
             .addItem(
                 buildQueryItemWithGroupAndFilters(
-                    "item4", groupUUID2, List.of(buildQueryFilter(EQ, "D"))))
+                    "item4", uuidB, List.of(buildQueryFilter(EQ, "D"))))
             .withEnhancedConditions(true)
             .build();
 
